--- a/index.html
+++ b/index.html
@@ -497,6 +497,85 @@
   <body>
     <div class="whiteboard">
       <h1>Quantum Mechanics Simulator</h1>
+
+      <!-- Introduction Section -->
+      <div class="panel" style="margin-bottom: 20px">
+        <h2 class="panel-heading">Introduction & Instructions</h2>
+        <div style="padding: 10px">
+          <h3 style="color: #3498db">What is this Quantum Simulator?</h3>
+          <p>
+            This interactive tool simulates quantum computing concepts with
+            mathematical accuracy. It models quantum bits (qubits) using complex
+            amplitudes, unitary transformations, and proper quantum measurement
+            mechanics.
+          </p>
+
+          <h3 style="color: #3498db">Key Features:</h3>
+          <ul>
+            <li>
+              <strong>Quantum Gates:</strong> Apply standard gates (X, Y, Z, H,
+              S, T) to manipulate qubit states
+            </li>
+            <li>
+              <strong>Entanglement:</strong> Create quantum entanglement between
+              qubits using CNOT gates
+            </li>
+            <li>
+              <strong>Measurement:</strong> Observe quantum states, causing wave
+              function collapse
+            </li>
+            <li>
+              <strong>Visualization:</strong> See Bloch sphere representations
+              and probability distributions
+            </li>
+          </ul>
+
+          <h3 style="color: #3498db">How to Use:</h3>
+          <ol>
+            <li>
+              <strong>Create Qubits:</strong> Enter a name and click "Create
+              Qubit" to add qubits to your system
+            </li>
+            <li>
+              <strong>Apply Gates:</strong> Click on gate buttons and specify
+              which qubit to transform
+            </li>
+            <li>
+              <strong>Entangle Qubits:</strong> Specify control and target
+              qubits to apply CNOT gate for entanglement
+            </li>
+            <li>
+              <strong>Visualize:</strong> Click "Visualize" to see detailed
+              quantum state information
+            </li>
+            <li>
+              <strong>Measure:</strong> Click "Measure All" to collapse qubits
+              to classical states
+            </li>
+            <li>
+              <strong>Reset:</strong> Click "Reset All" to return all qubits to
+              the |0⟩ state
+            </li>
+          </ol>
+
+          <div
+            style="
+              background-color: rgba(46, 204, 113, 0.1);
+              border-left: 4px solid #2ecc71;
+              padding: 10px;
+              margin-top: 15px;
+            "
+          >
+            <p>
+              <strong>Educational Note:</strong> This simulator follows quantum
+              mechanical principles including superposition, interference, and
+              entanglement. The visualizations help build intuition about
+              quantum computing concepts.
+            </p>
+          </div>
+        </div>
+      </div>
+
       <div class="container">
         <!-- Left Panel: Controls -->
         <div class="panel">
