--- a/index.html
+++ b/index.html
@@ -759,6 +759,24 @@
                 </a>
               </div>
 
+              <div class="project-card">
+                <a href="./floorplan/">
+                  <div class="project-image dewarp"></div>
+                  <div class="project-content">
+                    <h3>FLOORPLAN</h3>
+                    <p>
+                      Computer vision and WebGL tool that transforms 2D
+                      floorplan drawings into 3d virtual spaces.
+                    </p>
+                    <div class="project-tags">
+                      <span class="project-tag">WebGL</span>
+                      <span class="project-tag">Image Processing</span>
+                    </div>
+                    <span class="project-link">View Project</span>
+                  </div>
+                </a>
+              </div>
+
               <!-- <div class="project-card">
                 <a href="#">
                   <div class="project-image harmonic"></div>
